new files for gem generation

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,7 +24,7 @@
 			</div>			
 		</div>
 		<div id="footer">
-			Powered by <a href="http://gravityblast.com/projects/terror-the-micro-aggregator/" title="Terror the micro aggregator">Terror</a>
+			Powered by <a href="http://github.com/pilu/terror/" title="Terror the micro aggregator">Terror</a>
 		</div>
 	</div>
 </body>
